--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>frontend</artifactId>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>frontend</artifactId>
 
-  <parent>
-    <groupId>pdl</groupId>
-    <artifactId>client-serveur</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>pdl</groupId>
+		<artifactId>client-serveur</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
-  <build>
-    <plugins>
-      <plugin>
+	<build>
+		<plugins>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.3.2</version>
 				<executions>
-          <!-- Required: The following will ensure `npm install` is called
+					<!-- Required: The following will ensure `npm install` is called
 					     before anything else during the 'Default Lifecycle' -->
 					<execution>
 						<id>npm install (initialize)</id>
@@ -47,7 +48,7 @@
 							</arguments>
 						</configuration>
 					</execution>
-          <!-- Required: This following calls `npm run build` where 'build' is
+					<!-- Required: This following calls `npm run build` where 'build' is
 					     the script name I used in my project, change this if yours is
 							 different -->
 					<execution>
@@ -64,7 +65,7 @@
 							</arguments>
 						</configuration>
 					</execution>
-          <!-- <execution>
+					<!-- <execution>
 						<id>npm run clean (clean)</id>
 						<goals>
 							<goal>exec</goal>
@@ -78,8 +79,8 @@
 							</arguments>
 						</configuration>
 					</execution> -->
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
