--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.boofcv</groupId>
+			<artifactId>boofcv-core</artifactId>
+			<version>0.41</version>
+		</dependency>
 	</dependencies>
 
 	<build>
