--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,7 +54,7 @@
 									<includes>
 										<include>static/</include>
 										<include>index.html</include>
-										<include>favicon.ico</include>
+										<include>favicon.svg</include>
 									</includes>
 								</resource>
 							</resources>
